fix visibility

--- a/src/BudgetCalculator/css/BudgetCalculator.css
+++ b/src/BudgetCalculator/css/BudgetCalculator.css
@@ -24,6 +24,7 @@
   flex-direction: column;
   padding: 1.907%;
   box-sizing: border-box;
+  position: absolute;
 }
 
 .date {
